# himitsu-backend

./: .gitignore  Cargo.toml  Dockerfile  Procfile  README.md
migrations/2021-04-03-155901_notes/: down.sql  up.sql
migrations/2021-10-02-041351_plain_notes/: down.sql  up.sql
migrations/2021-10-29-150145_users/: up.sql
migrations/2021-10-29-165906_user_notes/: down.sql  up.sql
migrations/2021-10-29-170959_update_note_table/: down.sql  up.sql
migrations/2022-08-14-151130_nullable_title/: down.sql  up.sql
migrations/2022-11-26-180624_add_extra_mark_of_deletion_attribute/: down.sql  up.sql
src/: errors.rs  handlers.rs  main.rs  models.rs  schema.rs  utils.rs
src/handlers/: note.rs  plain_note.rs  token.rs  ws_note.rs
src/handlers/note/: mutate.rs  post.rs  query.rs
src/handlers/note/mutate/: new.rs
src/models/: note.rs  plain_note.rs
