[package]
authors = ["chcoomilk"]
edition = "2018"
name = "himitsu"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.5.4"
actix-ratelimit = "0.3.1"
actix-web = "3.3.3"
argon2 = "0.3.2"
diesel = {version = "1.4.8", features = ["postgres", "r2d2"]}
dotenv = "0.15.0"
env_logger = "0.9.0"
magic-crypt = "3.1.9"
r2d2 = "0.8.9"
serde = "1.0.133"
serde_json = "1.0.74"
derive_more = "0.99.17"