[package]
authors = ["chcoomilk"]
edition = "2021"
name = "himitsu"
version = "0.1.3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-cors = "0.6.2"
actix-governor = "0.3.1"
actix-web = "4.1.0"
actix-web-actors = "4.1.0"
derive_more = "0.99.17"
diesel = {version = "2.0.2", features = ["postgres", "r2d2"]}
diesel_migrations = "2.0.0"
dotenv = "0.15.0"
env_logger = "0.9.0"
jsonwebtoken = "8.1.1"
log = "0.4.17"
nanoid = "0.4.0"
r2d2 = "0.8.10"
rand = "0.8.5"
serde = "1.0.144"
serde_derive = "1.0.144"
serde_json = "1.0.85"
tindercrypt = {version = "0.3.2", default-features = false}
